--- a/style/style_impressoras.css
+++ b/style/style_impressoras.css
@@ -27,4 +27,19 @@ body{
 }
 
 
+.button{
+    padding:20px;
+    background-color:white;
+    margin:10px;
+    font-size: 20px;
+    text-decoration:none;
+    color: black;
+}
+.button:hover{
+    background-color: green;
+    color: white;
+}
 
+.logout{
+    text-decoration: ;
+}
