--- a/style/style_impressoras.css
+++ b/style/style_impressoras.css
@@ -10,11 +10,15 @@ body{
     font-size: small;
     font-family: "Times New Roman", Times, serif;    
 }
+.login_invalido{
+    padding:10px;
+    background-color:red;
+}
 
 .submit{
     width: 50px;
     height: 25px;
-    background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%' fill='currentColor' class='bi bi-arrow-return-right' viewBox='0 0 16 16'><path fill-rule='evenodd' d='M1.5 1.5A.5.5 0 0 0 1 2v4.8a2.5 2.5 0 0 0 2.5 2.5h9.793l-3.347 3.346a.5.5 0 0 0 .708.708l4.2-4.2a.5.5 0 0 0 0-.708l-4-4a.5.5 0 0 0-.708.708L13.293 8.3H3.5A1.5 1.5 0 0 1 2 6.8V2a.5.5 0 0 0-.5-.5z'/></svg>") ;
+    background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%' fill='currentColor' class='bi bi-arrow-return-right' viewBox='0 0 16 16'><path fill-rule='evenodd' d='M1.5 1.5A.5.5 0 0 0 1 2v4.8a2.5 2.5 0 0 0 2.5 2.5h9.793l-3.347 3.346a.5.5 0 0 0 .708.708l4.2-4.2a.5.5 0 0 0 0-.708l-4-4a.5.5 0 0 0-.708.708L13.293 8.3H3.5A1.5 1.5 0 0 1 2 6.8V2a.5.5 0 0 0-.5-.5z'/></svg>"); 
     background-repeat: no-repeat ;
     border-radius:none;
     background-color:rgba(160, 139, 139, 0.301);
@@ -22,24 +26,52 @@ body{
 
 .submit:hover{
     background-color:rgba(70, 59, 59, 0.692);
-    width: 52px;
-    height: 27px;
 }
 
 
 .button{
-    padding:20px;
+   
+    padding:30px;
     background-color:white;
-    margin:10px;
+    margin-top:10px;
     font-size: 20px;
     text-decoration:none;
     color: black;
 }
+
+.logout{
+    margin-left: 800px;
+    background-color:rgb(160, 148, 148);;
+    padding:10px;
+    text-decoration: none;
+    color: black;
+}
+
+.logout:hover{
+    background-color: red;
+    color: white;
+}
 .button:hover{
-    background-color: green;
+    background-color:green;
     color: white;
 }
 
-.logout{
-    text-decoration: ;
+#login_invalido{
+    padding: 20px;
+    background-color:red;
+}
+
+
+table {
+    width: 100%;
+}
+
+table th {
+    background-color: #EEE;
+    font-size: 18px;
+}
+
+table td {
+    border-bottom: 1px solid #333;
+    color: #000;
 }
