Co-authored-by: ANDERSON FERREIRA SANTOS <anderson97.santos@catolicasc.edu.br>

--- a/style/style_impressoras.css
+++ b/style/style_impressoras.css
@@ -75,3 +75,20 @@ table td {
     border-bottom: 1px solid #333;
     color: #000;
 }
+
+.input_preto{
+    background-color:rgb(0, 0, 0);
+    color:white;
+}
+
+.input_magenta{
+    background-color:magenta;
+}
+
+.input_ciano{
+    background-color: cyan;
+}
+
+.input_amarelo{
+    background-color: yellow
+}
